test/corpus/expression.txt
================================================================================
Integer literals
================================================================================

int a = 128;
int b = 3_000_000;
long b = 3_000_000l;
ulong b = 3_000_000ul;
uint c = 4_000u;
long d = 0xC4_FF;
long d = 0xC4_FFll;
ulong d = 0xC4_FFull;
int e = 0o775_111;
uint e = 0o775_111u;
char f = 0b1001_1001;
ichar f = 0b1001_1001;
char f = 0b1001_1001u;

--------------------------------------------------------------------------------

(source_file
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (integer_literal))))

================================================================================
Float literals
================================================================================

float a = 1f;
float a = 1.;
float a = 1.0;
float a = 1.f;
float a = 1.0f;
float a = 1.e1;
float a = 1.0e1;
float a = 1.0e1f;
float a = 1.0e-1f;
float a = 1.E1;
float a = 1.0E1;
float a = 1.0E1f;
float a = 1.0E-1f;
double b = 1.0e1d;
double b = 1.0e-1d;
double c = 0xc1fp4;
double c = 0xc2f.p4;
double c = 0xc2f.p4f;
double c = 0xc2f.p4d;
double c = 0xc3f.2fp+4;
double c = 0xc3f.2fp+4f;
double c = 0xc3f.2fp+4d;
double c = 0xc4f.2fp-4;
double c = 0xc4f.2fp-4f;
double c = 0xc4f.2fp-4d;
double c = 0XC1FP4;
double c = 0XC2F.P4;
double c = 0XC2F.P4F;
double c = 0XC2F.P4D;
double c = 0XC3F.2FP+4;
double c = 0XC3F.2FP+4F;
double c = 0XC3F.2FP+4D;
double c = 0XC4F.2FP-4;
double c = 0XC4F.2FP-4F;
double c = 0XC4F.2FP-4D;
float128 d = 1.0e+1f;
float128 d = 1.0E+1f;
float128 d = 0xdead.0eafP+1f;
float128 d = 0XDEAD.0EAFP+1f;

--------------------------------------------------------------------------------

(source_file
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (real_literal))))

================================================================================
Boolean literals
================================================================================

bool a = true;
bool b = false;

--------------------------------------------------------------------------------

(source_file
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident))))

================================================================================
Character literals
================================================================================

char a = 'a';
char b = '\0';
char c = '\t';
char d = '\'';
char e = 'b';
char f = 'c';
char g = '\xa1';
char h = '\x1A';
short i = '\u1A4F';
int j = '\U1A4F2D5B';
int k = 'abcd';
int l = 'a\xffd';
int m = '퀀';

--------------------------------------------------------------------------------

(source_file
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (char_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (escape_sequence))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (escape_sequence))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (escape_sequence))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (char_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (char_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (escape_sequence))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (escape_sequence))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (escape_sequence))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (escape_sequence))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (char_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (char_content)
        (escape_sequence)
        (char_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name))
      (ident)
      (char_literal
        (char_content)))))

================================================================================
String literals
================================================================================

char* a = "a";
char* b = "\"hi\"";
char* c = "bonjour";
char* d = "guten morgen";
char* e = "buenos dias";
char* f = "buongiorno";
char* g = `testing this ``now`` `;
char* h = x"4865 6c6c 6f20 776f 726c 6421";
char* i = b64"Rk9PQkFSMTE=";

--------------------------------------------------------------------------------

(source_file
  (global_declaration
    (declaration
      (type
        (base_type_name)
        (type_suffix))
      (ident)
      (string_literal
        (string_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name)
        (type_suffix))
      (ident)
      (string_literal
        (escape_sequence)
        (string_content)
        (escape_sequence))))
  (global_declaration
    (declaration
      (type
        (base_type_name)
        (type_suffix))
      (ident)
      (string_literal
        (string_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name)
        (type_suffix))
      (ident)
      (string_literal
        (string_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name)
        (type_suffix))
      (ident)
      (string_literal
        (string_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name)
        (type_suffix))
      (ident)
      (string_literal
        (string_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name)
        (type_suffix))
      (ident)
      (raw_string_literal
        (raw_string_content))))
  (global_declaration
    (declaration
      (type
        (base_type_name)
        (type_suffix))
      (ident)
      (bytes_literal)))
  (global_declaration
    (declaration
      (type
        (base_type_name)
        (type_suffix))
      (ident)
      (bytes_literal))))

================================================================================
Compound literals
================================================================================

fn void main() {
    (Foo) { 1, 2.0, .field = "string" };
    (LinkedList) { .allocator = alloc };
    LinkedList a = { .allocator = alloc, .size = 0 };
    *list = { .allocator = alloc, .size = 0 };
}

--------------------------------------------------------------------------------

(source_file
  (func_definition
    (func_header
      (type
        (base_type_name))
      (ident))
    (func_param_list)
    (macro_func_body
      (compound_stmt
        (expr_stmt
          (typed_initializer_list
            (type
              (path_type_ident
                (type_ident)))
            (initializer_list
              (initializer_element
                (integer_literal))
              (initializer_element
                (real_literal))
              (initializer_element
                (param_path
                  (param_path_element
                    (access_ident
                      (ident))))
                (string_literal
                  (string_content))))))
        (expr_stmt
          (typed_initializer_list
            (type
              (path_type_ident
                (type_ident)))
            (initializer_list
              (initializer_element
                (param_path
                  (param_path_element
                    (access_ident
                      (ident))))
                (ident_expr
                  (ident))))))
        (declaration_stmt
          (declaration
            (type
              (path_type_ident
                (type_ident)))
            (ident)
            (initializer_list
              (initializer_element
                (param_path
                  (param_path_element
                    (access_ident
                      (ident))))
                (ident_expr
                  (ident)))
              (initializer_element
                (param_path
                  (param_path_element
                    (access_ident
                      (ident))))
                (integer_literal)))))
        (expr_stmt
          (assignment_expr
            (unary_expr
              (ident_expr
                (ident)))
            (initializer_list
              (initializer_element
                (param_path
                  (param_path_element
                    (access_ident
                      (ident))))
                (ident_expr
                  (ident)))
              (initializer_element
                (param_path
                  (param_path_element
                    (access_ident
                      (ident))))
                (integer_literal)))))))))

================================================================================
Lambda expressions
================================================================================

fn void main() {
    CallbackFn f = fn (i) => i + 1;
    apply(x, fn (i) => i * i);
    apply(x, fn int(int i) { return i * i; });
}

--------------------------------------------------------------------------------

(source_file
  (func_definition
    (func_header
      (type
        (base_type_name))
      (ident))
    (func_param_list)
    (macro_func_body
      (compound_stmt
        (declaration_stmt
          (declaration
            (type
              (path_type_ident
                (type_ident)))
            (ident)
            (lambda_expr
              (lambda_declaration
                (func_param_list
                  (param
                    (ident))))
              (implies_body
                (binary_expr
                  (ident_expr
                    (ident))
                  (integer_literal))))))
        (expr_stmt
          (call_expr
            (ident_expr
              (ident))
            (call_arg_list
              (call_arg
                (ident_expr
                  (ident)))
              (call_arg
                (lambda_expr
                  (lambda_declaration
                    (func_param_list
                      (param
                        (ident))))
                  (implies_body
                    (binary_expr
                      (ident_expr
                        (ident))
                      (ident_expr
                        (ident)))))))))
        (expr_stmt
          (call_expr
            (ident_expr
              (ident))
            (call_arg_list
              (call_arg
                (ident_expr
                  (ident)))
              (call_arg
                (lambda_expr
                  (lambda_declaration
                    (type
                      (base_type_name))
                    (func_param_list
                      (param
                        (type
                          (base_type_name))
                        (ident))))
                  (compound_stmt
                    (return_stmt
                      (binary_expr
                        (ident_expr
                          (ident))
                        (ident_expr
                          (ident))))))))))))))

================================================================================
Assignment expressions
================================================================================

fn void main() {
    x = y;
    x += 1;
    x += y;
    *s = &p;
}

--------------------------------------------------------------------------------

(source_file
  (func_definition
    (func_header
      return_type: (type
        (base_type_name))
      name: (ident))
    (func_param_list)
    body: (macro_func_body
      (compound_stmt
        (expr_stmt
          (assignment_expr
            left: (ident_expr
              (ident))
            right: (ident_expr
              (ident))))
        (expr_stmt
          (assignment_expr
            left: (ident_expr
              (ident))
            right: (integer_literal)))
        (expr_stmt
          (assignment_expr
            left: (ident_expr
              (ident))
            right: (ident_expr
              (ident))))
        (expr_stmt
          (assignment_expr
            left: (unary_expr
              argument: (ident_expr
                (ident)))
            right: (unary_expr
              argument: (ident_expr
                (ident)))))))))

================================================================================
Unary expressions
================================================================================

fn void main() {
    -a;
    !b;
    *c;
    &d;
    &&12;
    &(*(&(e)));
}

--------------------------------------------------------------------------------

(source_file
  (func_definition
    (func_header
      (type
        (base_type_name))
      (ident))
    (func_param_list)
    (macro_func_body
      (compound_stmt
        (expr_stmt
          (unary_expr
            (ident_expr
              (ident))))
        (expr_stmt
          (unary_expr
            (ident_expr
              (ident))))
        (expr_stmt
          (unary_expr
            (ident_expr
              (ident))))
        (expr_stmt
          (unary_expr
            (ident_expr
              (ident))))
        (expr_stmt
          (unary_expr
            (integer_literal)))
        (expr_stmt
          (unary_expr
            (paren_expr
              (unary_expr
                (paren_expr
                  (unary_expr
                    (paren_expr
                      (ident_expr
                        (ident)))))))))))))

================================================================================
Binary expressions
================================================================================

fn void main() {
    a - a;
    !b && c;
    c || !b;
    12 + 12;
    100 * d;
    2 * (10 + 4);
    (2) * (10 + (4 << 2));
}

--------------------------------------------------------------------------------

(source_file
  (func_definition
    (func_header
      (type
        (base_type_name))
      (ident))
    (func_param_list)
    (macro_func_body
      (compound_stmt
        (expr_stmt
          (binary_expr
            (ident_expr
              (ident))
            (ident_expr
              (ident))))
        (expr_stmt
          (binary_expr
            (unary_expr
              (ident_expr
                (ident)))
            (ident_expr
              (ident))))
        (expr_stmt
          (binary_expr
            (ident_expr
              (ident))
            (unary_expr
              (ident_expr
                (ident)))))
        (expr_stmt
          (binary_expr
            (integer_literal)
            (integer_literal)))
        (expr_stmt
          (binary_expr
            (integer_literal)
            (ident_expr
              (ident))))
        (expr_stmt
          (binary_expr
            (integer_literal)
            (paren_expr
              (binary_expr
                (integer_literal)
                (integer_literal)))))
        (expr_stmt
          (binary_expr
            (paren_expr
              (integer_literal))
            (paren_expr
              (binary_expr
                (integer_literal)
                (paren_expr
                  (binary_expr
                    (integer_literal)
                    (integer_literal)))))))))))

================================================================================
Subscript expressions
================================================================================

fn void main() {
    a[0];
    b[:];
    b[..];
    c[1:];
    c[1..];
    d[1:2];
    d[1..2];
    e[a];
}

--------------------------------------------------------------------------------

(source_file
  (func_definition
    (func_header
      (type
        (base_type_name))
      (ident))
    (func_param_list)
    (macro_func_body
      (compound_stmt
        (expr_stmt
          (subscript_expr
            (ident_expr
              (ident))
            (integer_literal)))
        (expr_stmt
          (subscript_expr
            (ident_expr
              (ident))
            (range_expr)))
        (expr_stmt
          (subscript_expr
            (ident_expr
              (ident))
            (range_expr)))
        (expr_stmt
          (subscript_expr
            (ident_expr
              (ident))
            (range_expr
              (integer_literal))))
        (expr_stmt
          (subscript_expr
            (ident_expr
              (ident))
            (range_expr
              (integer_literal))))
        (expr_stmt
          (subscript_expr
            (ident_expr
              (ident))
            (range_expr
              (integer_literal)
              (integer_literal))))
        (expr_stmt
          (subscript_expr
            (ident_expr
              (ident))
            (range_expr
              (integer_literal)
              (integer_literal))))
        (expr_stmt
          (subscript_expr
            (ident_expr
              (ident))
            (ident_expr
              (ident))))))))

================================================================================
Call expressions
================================================================================

fn void main() {
    a();
    b(c, d);
    e.f(g);
    i.j.k();
    l::m::n();
    o::p();
}

--------------------------------------------------------------------------------
